src/test/resources/mutation/error/mutationTypeWithoutID/schema.graphqls
input EditInput @table(name : "CUSTOMER") {
  firstName: String @field(name : "FIRST_NAME")
  email: String
}

type Mutation {
  editCustomerWithoutID(input: EditInput!): ID! @mutation(typeName: UPDATE)
}
